# sio-postdoc

./: .env_template  .gitignore  README.md  create_netcdf.py  pyproject.toml
.github/workflows/: python-package.yml
sio_postdoc/access/: __init__.py
sio_postdoc/access/_local/: service.py
sio_postdoc/access/instrument/: constants.py  context.py  contracts.py  service.py  strategies.py  strategies_.py  types.py
sio_postdoc/access/instrument/contexts/: binary.py  data.py
sio_postdoc/access/instrument/strategies/: constants.py  contracts.py  data.py  hardware.py  location.py
sio_postdoc/access/local/: service.py
sio_postdoc/engine/: __init__.py
sio_postdoc/engine/filtering/: __init__.py  context.py  service.py  strategies.py
sio_postdoc/engine/formatting/: service.py  strategies.py
sio_postdoc/engine/transformation/: __init__.py  contracts.py  service.py  strategies.py  wavelet.py  window.py
sio_postdoc/engine/transformation/context/: service.py
sio_postdoc/engine/transformation/strategies/: base.py  masks.py
sio_postdoc/manager/: __init__.py
sio_postdoc/manager/observation/: colorbars.py  colormaps.py  contracts.py  facecolors.py  plot_labels.py  service.py
sio_postdoc/manager_/observation/: service.py
sio_postdoc/utility/: builders.py  service.py
tests/: troubleshoot_test.py
tests/access/_local/integration/: file_access_protocol_test.py  rename_files_test.py
tests/access/instrument/: access_unit_test.py  concatinate_raw_datat_unit_test.py
tests/access/instrument/integration/: blob_access_protocol_test.py  concatinate_raw_data_test.py  identify_files_test.py  sheba_dabul_raw_test.py  sheba_mmcr_raw_test.py
tests/access/instrument/unit/: abstract_data_strategy_test.py  contracts_representation_test.py  contracts_test.py  convert_bytes_test.py  datetime_property_test.py  request_data_test.py
tests/access/local/integration/: file_access_protocol_test.py  rename_files_test.py
tests/engine/transformation/: convert_bytes_test.py
tests/helper/: create_raw_test_data.py
(+74 files in other folders)
