[tool.poetry]
name = "sio-postdoc"
version = "0.1.0"
description = ""
authors = ["Rich Inman <rinman24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
azure-identity = "^1.15.0"
azure-storage-blob = "^12.19.0"
ipywidgets = "^8.1.1"
jupyterlab = "^4.0.10"
matplotlib = "^3.8.2"
netcdf4 = "^1.6.5"
numpy = "^1.26.3"
pandas = "^2.1.4"
pyarrow = "^15.0.0"
pydantic = "^2.6.1"
seaborn = "^0.13.1"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
python-dotenv = "^1.0.1"
pytest-randomly = "^3.15.0"

[tool.ruff.lint]
extend-select = [
    "D",  # pydocstyle
    "PL",  # Pylint
]

[rool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D103", "PLR2004"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
